# geoprior1d

GeoPriorApp/: prior_apptest.xlsx  readme.txt
GeoPriorApp/resources/project/fjRQtWiSIy7hIlj-Kmk87M7s21k/: moxP5hOT6R9o9KhChDgZreKaPA8d.xml  moxP5hOT6R9o9KhChDgZreKaPA8p.xml
GeoPriorApp/resources/project/moxP5hOT6R9o9KhChDgZreKaPA8/: 39ccy7EmcZZASEpVVUzQkgExRPsp.xml  4aXDvxssCCh0NSUG7_5RMfQ8g2Yp.xml  FHkgbyQzHcxLvtFYrdwuzfiyrtop.xml  NHXXWOI56GzVh2m54wrI_o9jPCAp.xml  NI3INcM7xs_1SlofrTP-5nQiYjYp.xml  RLxkzNZWx2CBnTukOAca7wsjfgEp.xml  fAf5b2xiHw1FAu9pOVGQhQ7MTL8p.xml  hk-4vCltdpxtbSwGQTscxra7Mxkp.xml  oPGR5DOZ8z8N2_rsumsp9qaUjIQp.xml  prjguFMwQ1XKeIkmMyecQsRGQFYp.xml
GeoPriorApp/resources/project/qaw0eS1zuuY1ar9TdPn1GMfrjbQ/: CKcqYWoQU5Smggpc-otoW_wxMBkp.xml  IDMDjVQ8CnzyWOc5UwzgKQ03Ecop.xml  UlCqplLWd0dhERLd6ECLdnczxwsp.xml  uG__cShv-_bpYJbq5fWahu0mFWIp.xml  ulpv69PSCkRu7qbIMn6RMp5cE9Ip.xml
GeoPriorApp/resources/project/root/: GiiBklLgTxteCEmomM8RCvWT0nQd.xml  Ne1ZVd2oBQCKbwZ2SeOEwvwxmfQd.xml  Ne1ZVd2oBQCKbwZ2SeOEwvwxmfQp.xml  amwE3LmoG--0pRWluRol6WgE4ZYd.xml
Matlab v.1.0/: .gitignore  GeoPriorApp.m  Manual for prior generator.docx
geoprior1d/: CLAUDE.md  README.md  pyproject.toml  requirements.txt  setup.py  test_quick.py
geoprior1d/examples/: basic_usage.py
geoprior1d/geoprior1d/: __init__.py  cli.py  core.py  sampling.py
