[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "geoprior1d"
version = "0.9.0"
description = "1D geological prior generator for stochastic lithology and resistivity modeling"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
maintainers = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = [
    "geophysics",
    "geology",
    "resistivity",
    "lithology",
    "prior",
    "stochastic",
    "monte-carlo",
    "subsurface"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Geology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

# Core dependencies
dependencies = [
    "numpy>=1.20.0",
    "h5py>=3.0.0",
    "matplotlib>=3.3.0",
    "pandas>=1.2.0",
    "scipy>=1.6.0",
    "tqdm>=4.60.0",
]

[project.optional-dependencies]
# Development dependencies
dev = [
    "pytest>=7.0",
    "pytest-cov>=3.0",
    "black>=22.0",
    "flake8>=4.0",
    "mypy>=0.950",
    "isort>=5.10",
]

# Documentation dependencies
docs = [
    "sphinx>=4.0",
    "sphinx-rtd-theme>=1.0",
    "myst-parser>=0.18",
]

# All optional dependencies
all = ["geoprior1d[dev,docs]"]

[project.scripts]
geoprior1d = "geoprior1d.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/geoprior1d"
Documentation = "https://github.com/yourusername/geoprior1d/blob/main/README.md"
Repository = "https://github.com/yourusername/geoprior1d"
Issues = "https://github.com/yourusername/geoprior1d/issues"
Changelog = "https://github.com/yourusername/geoprior1d/blob/main/CHANGELOG.md"

[tool.setuptools]
packages = ["geoprior1d"]

[tool.setuptools.package-data]
geoprior1d = ["py.typed"]

# Black configuration
[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

# isort configuration
[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

# pytest configuration
[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --cov=geoprior1d --cov-report=term-missing"
testpaths = ["tests"]
pythonpath = ["."]

# mypy configuration
[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

# Coverage configuration
[tool.coverage.run]
source = ["geoprior1d"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
